# shelter

./: .gitignore  Cargo.toml  LICENSE
entity/: Cargo.toml
entity/src/: user.rs
migration/src/: m20220101_000001_create_table.rs
shelter_main/: Cargo.toml
shelter_main/src/: main.rs  settings.rs
shelter_main/src/api/: mod.rs  v1.rs
shelter_main/src/api/handlers/: login.rs
shelter_main/src/api/response/: mod.rs
shelter_main/src/commands/: createadmin.rs  hello.rs  migrate.rs  mod.rs  serve.rs
shelter_main/src/state/: mod.rs
