[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
axum-server = "0.6.0"
clap = "4.4.14"
config = "0.13.4"
dotenv = "0.15.0"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
arc-swap = { version = "1.6.0", features = [] }
sea-orm = { version = "0.12.11", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
migration = { path = "../migration" }
entity = { path = "../entity" }
password-hash = "0.5.0"
argon2 = "0.5.3"
